Fixing position on page since header on mobile fix

--- a/_sass/_landing-page.scss
+++ b/_sass/_landing-page.scss
@@ -34,7 +34,7 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .intro-header-content {
     position: absolute;
-    top: 40px;
+    top: 80px;
 
     @media (min-width: $screen-sm-min) {
         top: 118px;
